<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignLeft="@+id/tvLoginPgNotRegistered"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/tvLoginPgNotRegistered"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_icon" />

        <RelativeLayout
            android:id="@+id/rlLoginPgPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="180dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ivLoginPgPhoneIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/phone_icon" />

            <EditText
                android:id="@+id/etLoginPgPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/ivLoginPgPhoneIcon"
                android:layout_toRightOf="@+id/ivLoginPgPhoneIcon"
                android:hint="@string/Phone"
                android:inputType="phone"
                android:textSize="@dimen/TextSize16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLoginPgPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/rlLoginPgPhoneNumber"
            android:layout_gravity="center"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ivLoginPagePassIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/password_icon" />

            <EditText
                android:id="@+id/etLoginPgPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/ivLoginPagePassIcon"
                android:layout_toRightOf="@+id/ivLoginPagePassIcon"
                android:hint="@string/Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textSize="@dimen/TextSize16" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvLoginPgForgetYourPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_below="@+id/rlLoginPgPassword"
            android:text="Forgot your password ?"
            android:textColor="@color/blue"
            android:textSize="@dimen/TextSize14" />

        <Button
            android:id="@+id/bLoginPgSubmit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tvLoginPgForgetYourPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttons"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/TextSize16" />

        <TextView

            android:id="@+id/tvLoginPgNotRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/bLoginPgSubmit"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text=" Not yet Registered?"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSize16" />

        <Button
            android:id="@+id/bLoginPgSignup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tvLoginPgNotRegistered"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/buttons"
            android:text="@string/Signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/TextSize16" />
    </RelativeLayout></ScrollView>

</RelativeLayout>