<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/mapstoolbar"
        layout="@layout/toolbar_map" />

    <co.sendd.helper.CustomScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mapstoolbar"
        android:background="@color/white">

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"

            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddress1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="Loading Please Wait..."
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <FrameLayout
                android:id="@+id/mapFrame"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/tvAddress1">

                <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_alignParentTop="true" />

                <ImageView
                    android:id="@+id/ivlocate"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="130dp"
                    android:background="@android:drawable/ic_menu_mylocation"
                    android:baselineAlignBottom="true"
                    android:paddingBottom="10dp" />
            </FrameLayout>


            <LinearLayout
                android:id="@+id/llonee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mapFrame"
                android:orientation="horizontal"
                android:weightSum="100">

                <EditText
                    android:id="@+id/Flatnobldno"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="50"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:hint="@string/FaltnoBldNo"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/Pincode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="50"
                    android:background="@color/grey"
                    android:gravity="center"
                    android:hint="@string/Pincode"
                    android:padding="5dp"

                    android:singleLine="true"
                    android:textSize="18sp" />
            </LinearLayout>


            <Button
                android:id="@+id/bSaveaddress"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/llonee"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:background="@drawable/buttons"
                android:text="@string/Save" />
        </RelativeLayout>
    </co.sendd.helper.CustomScrollView>
</RelativeLayout>
